# tali

./: Cargo.toml  README.md
src/: cli.rs  lib.rs  main.rs
src/commands/: file.rs
src/lib/: display.rs  file.rs  language.rs  mod.rs  scanner.rs  table.rs  walk.rs
src/lib/display/: json.rs  mod.rs  table.rs
src/lib/display/helpers/: mod.rs
src/lib/display/helpers/table/: alignment.rs
src/lib/helpers/: ansi.rs  language.rs  mod.rs  path.rs
src/lib/helpers/table/: alignment.rs  builder.rs  columns.rs  iterator.rs  mod.rs  separator.rs
src/lib/output/: delimiter.rs  json.rs  mod.rs  table.rs
src/lib/scanner/: accumulators.rs  file.rs  mod.rs  results.rs
