[package]
name = "tali"
description = "Count the number of lines, words, and bytes"
version = "0.1.1"
edition = "2024"
authors = ["Shresht7"]

[lib]
path = "src/lib/mod.rs"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
globset = "0.4.16"
ignore = "0.4.23"
rayon = "1.10.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
